# test2

Adventure.hsproj/: .uuid  Adventure.cabal  Main.hs  Parser.hs  _Parser.hsplay  test.txt
